--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,12 +1,12 @@
-<html lang='en'>
-<head>
-  <meta charset='utf-8' />
-  <link rel='icon' type='image/png' href='/favicon.png' />
-  <meta name='viewport' content='width=device-width' />
-  <meta name='generator' content={Astro.generator} />
-  <title>code|arts – Erik Ostrom</title>
-</head>
-<body>
-<slot />
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>code|arts – Erik Ostrom</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
