Port CSS from Gridsome
- PostCSS nesting.
- `normalize.css`
- Fonts from Fontsource.
- Images and styles for the home page.
- Fix white space in brand header.
  - Probably a better way to do it but I'm just trying to port the existing site.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,3 +1,11 @@
+---
+import '@fontsource/noto-serif'
+import '@fontsource/roboto'
+import '@fontsource/roboto-mono'
+import 'normalize.css'
+import '../styles/codearts.css'
+---
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
