--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import ArtsContents from '../components/ArtsContents.vue'
 import CodeContents from '../components/CodeContents.vue'
 ---
 
-<BaseLayout>
+<BaseLayout title="code|arts">
   <div class="braingrid">
     <div class="brand">
       <span class="display arts">Erik&nbsp;</span><span class="display code"
