arts[words] page
- Add `section` field to posts, for each words page to filter on.
- Port page from Gridsome, merge with code[words] work.
- Port arts-only posts and fix timestamp format.

--- a/src/pages/code/words.astro
+++ b/src/pages/code/words.astro
@@ -4,7 +4,11 @@ import CodeGrid from '../../layouts/CodeGrid.astro'
 import BlogPostExcerpt from '../../components/BlogPostExcerpt.vue'
 
 const allCodePosts = (
-  await getCollection('code-words', ({data}) => data.status !== 'draft')
+  await getCollection(
+    'words',
+    ({data}) =>
+      data.status !== 'draft' && ['code', 'both'].includes(data.section),
+  )
 ).reverse()
 ---
 
