Reformat CSS and Markdown files with Prettier.

--- a/src/pages/arts/words/[slug].astro
+++ b/src/pages/arts/words/[slug].astro
@@ -41,6 +41,8 @@ const shortDate = shortDateFormat.format(dateObject)
       </time>
     </header>
 
-    <div class="body"><Content /></div>
+    <div class="body">
+      <Content />
+    </div>
   </article>
 </ArtsGrid>
