Fix post layout bug
Preexisting from Gridsome version: `blockquote` made post bodies wider than intended.

--- a/src/pages/arts/words/[slug].astro
+++ b/src/pages/arts/words/[slug].astro
@@ -45,3 +45,9 @@ const shortDate = shortDateFormat.format(dateObject)
     </div>
   </article>
 </ArtsGrid>
+
+<style>
+  .body {
+    max-width: 60ch;
+  }
+</style>
