--- a/src/pages/code/words/[slug].astro
+++ b/src/pages/code/words/[slug].astro
@@ -48,7 +48,7 @@ const shortDate = shortDateFormat.format(dateObject)
 
 <style>
   .body {
-    max-width: 100%;
+    max-width: 60ch;
     text-align: left;
   }
 </style>
