--- a/src/layouts/ArtsGrid.astro
+++ b/src/layouts/ArtsGrid.astro
@@ -10,6 +10,7 @@ const {displayOnly, title} = Astro.props
 ---
 
 <BaseLayout title={title}>
+  <slot name="head" slot="head" />
   <div class="braingrid arts">
     <a class="brand" href="/">
       <div class="monogram">
