--- a/src/layouts/CodeGrid.astro
+++ b/src/layouts/CodeGrid.astro
@@ -1,6 +1,7 @@
 ---
 import CodeContents from '../components/CodeContents.vue'
-import BaseLayout, {Props as BaseLayoutProps} from './BaseLayout.astro'
+import BaseLayout from './BaseLayout.astro'
+import type {Props as BaseLayoutProps} from './BaseLayout.astro'
 
 type Props = BaseLayoutProps & {
   displayOnly?: boolean
