--- a/src/layouts/ArtsGrid.astro
+++ b/src/layouts/ArtsGrid.astro
@@ -1,6 +1,7 @@
 ---
 import ArtsContents from '../components/ArtsContents.vue'
-import BaseLayout, {Props as BaseLayoutProps} from './BaseLayout.astro'
+import BaseLayout from './BaseLayout.astro'
+import type {Props as BaseLayoutProps} from './BaseLayout.astro'
 
 type Props = BaseLayoutProps & {
   displayOnly?: boolean
