Add page titles

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@ import 'normalize.css'
 import '../styles/codearts.css'
 
 export type Props = {
-  title?: string
+  title: string
 }
 
 const {title} = Astro.props
