--- a/src/pages/arts/words/[slug].astro
+++ b/src/pages/arts/words/[slug].astro
@@ -38,7 +38,7 @@ const twitter: SeoProps['twitter'] = {
 }
 ---
 
-<ArtsGrid>
+<ArtsGrid title={title}>
   <Seo slot="head" facebook={facebook} twitter={twitter} />
 
   <article>
