--- a/src/pages/code/words.astro
+++ b/src/pages/code/words.astro
@@ -12,7 +12,7 @@ const allCodePosts = (
 ).reverse()
 ---
 
-<CodeGrid displayOnly={true}>
+<CodeGrid title="code[words]" displayOnly={true}>
   <h1>words</h1>
 
   {allCodePosts.map((post) => <BlogPostExcerpt post={post} />)}
