Prevent orphaned words (mostly) in show info

--- a/src/pages/arts/shows.astro
+++ b/src/pages/arts/shows.astro
@@ -67,6 +67,8 @@ const futureShows = allShows.slice(pastShows.length)
     :global(th) {
       padding: 0.5em;
       vertical-align: top;
+      text-wrap: balance;
+      text-wrap: pretty;
 
       &:not(:first-child) {
         padding-left: 1em;
